GPT-1339: Add filter and search for work-items API (#1157)
